# hachicount

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  idée.txt  main.py  pyproject.toml  rxconfig.py
hachicount/: auth_api.py  hachicount.py  navigation.py  routes.py  settings.py  solver.py
hachicount/components/: layout.py
hachicount/db/: counts.py  engine.py  errors.py  models.py  participants.py  settings.py  users.py
hachicount/oidc/: __init__.py  client.py  errors.py  settings.py
hachicount/pages/: index.py  login.py  profile.py
hachicount/states/: auth.py  count.py  user.py
tests/: test_solver.py
